--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -8,7 +8,7 @@
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <style>
         .site-header {
-            padding: 3rem 2rem 2rem;
+            padding: 3rem 2rem 1rem;
             max-width: 800px;
             margin: 0 auto;
         }
@@ -79,7 +79,7 @@
             <span>/</span>
             <a href="/coaching/"{% if page.url.includes("/coaching") %} class="active"{% endif %}>Coaching</a>
             <span>/</span>
-            <a href="/produkte/"{% if page.url.includes("/produkte") %} class="active"{% endif %}>Produkte</a>
+            <a href="/werkzeuge/"{% if page.url.includes("/werkzeuge") %} class="active"{% endif %}>Werkzeuge</a>
             <span>/</span>
             <a href="/kaktus/"{% if page.url.includes("/kaktus") %} class="active"{% endif %}>Kaktus</a>
             <span>/</span>
