Update and rename produkte.njk to werkzeuge.njk

--- a/src/werkzeuge.njk
+++ b/src/werkzeuge.njk
@@ -1,11 +1,11 @@
 ---
 layout: base
-title: Produkte & Tools
+title: Werkezeuge
 ---
 <div class="content-page">
     <a href="/" class="back-link">← Zurück</a>
     
-    <h1 class="page-title">Produkte & Tools</h1>
+    <h1 class="page-title">Werkzeuge</h1>
     
     <div class="product-grid">
         <div class="product-item">
