--- a/src/index.njk
+++ b/src/index.njk
@@ -77,7 +77,7 @@ title: Raum für Menschlichkeit und Tiefe
   <nav class="hero-nav">
     <a href="/texte/">Texte</a>
     <a href="/coaching/">Coaching</a>
-    <a href="/produkte/">Produkte</a>
+    <a href="/werkzeuge/">Werkzeuge</a>
     <a href="/kaktus/">Kaktus</a>
     <a href="/ueber/">Über mich</a>
   </nav>
