--- a/src/texte.njk
+++ b/src/texte.njk
@@ -3,6 +3,10 @@ layout: base
 title: Texte
 ---
 <style>
+  .content-page {
+    padding-top: 1rem;
+  }
+
   .category-tabs {
     display: flex;
     gap: 2rem;
