--- a/src/werkzeuge.njk
+++ b/src/werkzeuge.njk
@@ -1,11 +1,9 @@
 ---
 layout: base
-title: Werkezeuge
+title: Werkzeuge
 ---
 <div class="content-page">
     <a href="/" class="back-link">← Zurück</a>
-    
-    <h1 class="page-title">Werkzeuge</h1>
     
     <div class="product-grid">
         <div class="product-item">
