--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% if title %}{{ title }} - {% endif %}Jochen Hornung</title>
+    <link rel="icon" type="image/png" href="/images/JH_Logo1.png">
+    <link rel="apple-touch-icon" href="/images/JH_Logo1.png">
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <style>
