--- a/src/werkzeuge.njk
+++ b/src/werkzeuge.njk
@@ -8,7 +8,7 @@ title: Werkzeuge
         flex-direction: column;
         align-items: center;
         text-align: center;
-        margin-bottom: 4rem;
+        margin-bottom: 2.5rem;
     }
     .product-logo {
         max-width: 200px;
@@ -30,6 +30,7 @@ title: Werkzeuge
         display: block;
         margin-bottom: 0.5rem;
         color: #1a1a1a;
+        font-weight: normal;
     }
     .product-status {
         color: #666;
