--- a/src/werkzeuge.njk
+++ b/src/werkzeuge.njk
@@ -8,7 +8,10 @@ title: Werkzeuge
         flex-direction: column;
         align-items: center;
         text-align: center;
-        margin-bottom: 1.5rem;
+        margin-bottom: 2.5rem;
+    }
+    .product-grid {
+        gap: 1.5rem;
     }
     .product-logo {
         max-width: 200px;
